Name:           Semantics
Version:        1.1
License:        BSD3
Author:         Maarten Faddegon
Build-Type:     Simple
Cabal-Version:  >= 1.10
extra-source-files: README

Executable Semantics-test
  Build-Depends:     base >= 4 && < 5, monads-tf, QuickCheck, libgraph
  hs-source-dirs:    src
  main-is:           Test.hs
  other-modules:     IntendedSemantics
  default-language:  Haskell2010
  ghc-prof-options:  -auto-all

library
  Build-Depends:     base, libgraph, monads-tf
  exposed-modules:   TraceSemantics
  hs-source-dirs:    src
  other-modules:     SimpleSemantics, StackSemantics
  default-language:  Haskell2010

