Name:           Semantics
Version:        1.3
License:        BSD3
Author:         Maarten Faddegon
Build-Type:     Simple
Cabal-Version:  >= 1.10
extra-source-files: README

Executable Semantics-test
  build-Depends:     base >= 4 && < 5, monads-tf, QuickCheck, libgraph == 1.2
  hs-source-dirs:    src
  main-is:           Test.hs
  other-modules:     IntendedSemantics
  default-language:  Haskell2010
  ghc-prof-options:  -auto-all

Executable Equivalence-test
  build-Depends:     base >= 4 && < 5, monads-tf, QuickCheck, libgraph == 1.2,
                     test-framework, test-framework-hunit, HUnit, containers
  hs-source-dirs:    src
  main-is:           Equivalence.hs
  other-modules:     IntendedSemantics, TraceSemantics
  default-language:  Haskell2010
